rnsc/test_data/integration/error/parser/type_hints/methodref/no_operands_recovers.rns
.class   @methodref
blabla ; <- should be still reported as an error